--- a/all-playtime/package.json
+++ b/all-playtime/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "vdf": "^0.0.2",
     "zod": "^4.1.12"
   },
   "devDependencies": {
